  - Rewrote code for getting command line options to make it
    compatable across operating systems.

  - Compatibility functions for WIN32 created. These functions
    are stored in winfunctions.cpp and winfunctions.h
    strncasecmp and strcasestr functions are now duplicated
    and wrapped up in ifdefs.

  - Converted snprintf calls to sprintf for WIN32

  - Converted fabs() calls to abs() in radar.cpp for the WIN32 platform.

  - Dependency unistd.h removed from main.cpp

  - Added thermal layers to listening function Can_Hear().

  - Added DEBUGMAP flag for Makefile to help test MAP class.

  - Added MAP class, which will handle depth and thermal layer information.

============ openssn-0.7 released August 15, 2011 =============

  - Added sounds for pinging, torpedo launch and explosions.

  - Added sounds directory creation to makefile.

  - Added click button for active sonar.

  - Torpedo room buttons looks more torpedo-like.

  - Ships will run from torpedoes, even if they are chasing/attacking.

  - Ships now fire torpedoes at ships they are chasing.

  - Added active sonar for player.

  - Ships and subs should now remain within the map boarders.

  - Sonar contacts now get stronger/weaker properly. Moved InBaffles
    check to the Submarine class to make it modular.

  - Sonar display is no longer erased by ESM or radar data.

  - Ships with sonar now warn other ships about torpedoes in
    the water.

  - Game should remain stable if a torpedo we are tracking
    explodes or runs out of fuel.

  - Surface ships with radar should be able to detect anything on
    or above the surface.

  - Ships running from torpedoes will now eventually change course
    and slow down if no more torpedoes are detected.

  - Ships in a convoy now react when one of them is hit.
    Merchants scatter.

  - Moved update functions out of timer function to avoid
    overlap if too much is going on. Instead timer function now