@@ -1,7 +1,8 @@
 Current development team
 
-Jesse Smith <jessefrgsmith@yahoo.ca>
-
+Jesse Smith <jessefrgsmith@yahoo.ca> (Development)
+magic-stix (Porting to Windows)
+Fernando Liebana (Spanish translation)
 
 
 Original LinuxSSN team, who created the foundation for this project,
