@@ -1,8 +1,9 @@
+We should not see target data on the map screen if we cannot track the target.
+Add up/down thermal depth commands
 
 Make Stack more flexible, it's a fixed-length array.
 
 AI stuff
   Warships should hunt origins of torpedoes
 
-Add thermal indicators to interface
 
