@@ -3,6 +3,10 @@
 
 #include <SDL.h>
 
+#ifndef DATADIR
+#define DATADIR "."
+#endif
+
 // Find the full path of a file based on its name.
 // The return value should be freed UNLESS the return
 // value is equal to the filename passed in.
